--- a/src/pages/zh/blog/index.astro
+++ b/src/pages/zh/blog/index.astro
@@ -52,7 +52,7 @@ try {
     {
       allPosts.map((post) => (
         <a
-          href={`/zh-SG/blog/${post.slug}`}
+          href={`/zh/blog/${post.slug}`}
           data-astro-prefetch
           class="group glass-panel rounded-3xl p-8 hover:bg-white/5 transition-all relative overflow-hidden"
         >
