--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -106,7 +106,7 @@ try {
           recentPosts.length > 0 ? (
             recentPosts.map((post) => (
               <a
-                href={`/zh-SG/blog/${post.slug}`}
+                href={`/zh/blog/${post.slug}`}
                 data-astro-prefetch
                 class="block group/item hover:bg-white/5 p-4 rounded-xl transition-colors border border-transparent hover:border-white/5"
               >
@@ -133,7 +133,7 @@ try {
 
       <div class="mt-4 pt-4 border-t border-white/5">
         <a
-          href="/zh-SG/blog"
+          href="/zh/blog"
           data-astro-prefetch
           class="text-xs text-gray-400 hover:text-white flex items-center gap-2 transition-colors"
         >
