--- a/src/pages/zh/profile.astro
+++ b/src/pages/zh/profile.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 import { useTranslations } from "../../i18n/utils";
 
-const lang = "zh-SG";
+const lang = "zh";
 const t = useTranslations(lang);
 
 const user = Astro.locals.user;
