--- a/src/pages/zh/login/index.astro
+++ b/src/pages/zh/login/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../../../layouts/Layout.astro";
 import { useTranslations } from "../../../i18n/utils";
 
-const lang = "zh";
+const lang = "zh-SG";
 const t = useTranslations(lang);
 ---
 
